<resources>
    <string name="app_name">Ketchup</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>

    <!-- Menu names of Drawer -->
    <string name="menu_today">오늘 할일</string>
    <string name="menu_upcoming">다가올 일</string>
    <string name="menu_overdue">지난 일</string>
    <string name="menu_memo">메모</string>
    <string name="menu_tomorrow">내일 할일</string>
    <string name="menu_all">모두보기</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="empty_recycler_view">Empty State\nPlease add more task.</string>

    <string name="item_title">Title</string>
    <string name="item_due_date">time</string>
    <string name="item_description">Check you activity</string>


    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="color_label">Label</string>
    <string name="complete">Complete</string>
    <string name="reminder">Reminder</string>

    <string name="title_error">Title is Empty.</string>

    <string name="today">Today</string>
    <string name="err_before_today">현재보다 이전 시간은 설정할 수 없습니다.</string>
    <string name="err_no_task_to_delete">삭제할 Task가 없습니다.</string>

    <string name="noti_action_delete">삭제</string>
    <string name="noti_action_complete">완료</string>
    <string name="noti_action_snooze">미루기</string>

    <string name="header_name_completed">완료</string>
    <string name="header_name_uncompleted">미완료</string>
</resources>
