<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_menu_today"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_menu_upcoming"
            android:title="@string/menu_upcoming" />
        <item
            android:id="@+id/nav_overdue"
            android:icon="@drawable/ic_menu_overdue"
            android:title="@string/menu_overdue" />
        <item
            android:id="@+id/nav_memo"
            android:icon="@drawable/ic_menu_memo"
            android:title="@string/menu_memo" />
        <item
            android:id="@+id/nav_tomorrow"
            android:icon="@drawable/ic_done_black_24dp"
            android:title="@string/menu_tomorrow" />
        <item
            android:id="@+id/nav_all_tasks"
            android:icon="@drawable/ic_for_test"
            android:title="@string/menu_all" />
    </group>

    <item android:title="Communicate"
        android:checkable="true">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
