<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/task_item_layout_linear_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:background="@drawable/item_selector"
    android:elevation="5dp"
    app:pressedTranslationZ="12dp"
    app:rippleColor="@color/lightGray"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/task_item_layout_linear_color_label"
        android:layout_width="12dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_layout_linear_contents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/task_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="220dp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:text="@string/item_title"
            android:textAppearance="@style/TextAppearanceSize.Small" />

        <TextView
            android:id="@+id/task_item_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/item_due_date"
            android:visibility="gone"
            android:textAppearance="@style/TextAppearance.Date" />

        <TextView
            android:id="@+id/task_item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/item_description"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <!-- Extra space for icons and info. -->
    <LinearLayout
        android:id="@+id/task_item_layout_linear_extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:minWidth="50dp"
        android:layout_gravity="end"
        android:padding="10dp" />

</LinearLayout>
